ui: Fix double borders
Relying on GtkFrame's shadow for borders will give us additional
vertical borders that are already covered by the sidebar's border;
to avoid double borders, explicitly set the borders we actually need.

--- a/src/chat.css
+++ b/src/chat.css
@@ -6,6 +6,11 @@
     border-width: 0 0 0 1px;
 }
 
+.chat-status-area,
+.chat-main-input-area {
+    border-width: 1px 0 0 0;
+}
+
 chat-left-header-bar:dir(ltr) {
  border-right-width: 1px;
 }
